menu z-index fix and wapoint position for feature map

--- a/client/stylesheets/partials/_artist-map.scss
+++ b/client/stylesheets/partials/_artist-map.scss
@@ -32,6 +32,9 @@
 
 .map-table {
   overflow-y: auto;
+  @media(max-width: 786px) {
+    overflow-y: visible;
+  }
   td {
     text-align: left;
     .map-table-title {
