--- a/client/stylesheets/partials/_explore.scss
+++ b/client/stylesheets/partials/_explore.scss
@@ -9,7 +9,7 @@
       margin-left: 2%;
     }
     @media (max-width: 768px) {
-      margin-left: 20px;
+      margin-left: 10px;
     }
   .dropdown {
     background: none !important;
