--- a/client/stylesheets/partials/_home.scss
+++ b/client/stylesheets/partials/_home.scss
@@ -20,19 +20,15 @@
       }
     }
   }
-  .affix {
-    // @media(max-width: 768px) {
-      position: fixed;
-      top: 0;
-      width: 100%;
-    // }
-  }
   .featured-table-col {
     height: 400px;
     overflow: auto;
     padding-left: 18px;
+    @extend %clearfix;
     @media (max-width: 768px) {
       padding: 0 !important;
+      height: auto;
+      overflow: visible;
     }
   }
 }
