--- a/client/stylesheets/partials/_maps.scss
+++ b/client/stylesheets/partials/_maps.scss
@@ -71,3 +71,7 @@
   width: 100%;
   z-index: 1005;
 }
+
+.mobile-map-table {
+  margin-top: 200px;
+}
